--- a/landing/index.html
+++ b/landing/index.html
@@ -1,13 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>HELLO</h1>
-    <a href="/app">APP</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/index.css">
+  <title>Document</title>
+</head>
+
+<body>
+
+  <header class="header">
+
+    <div class="header--wrapper">
+
+      <div class="header--slogan">
+        <div class="header--title">
+          <h1>AIR</h1>
+          <h2>fitness</h2>
+        </div>
+        <div class="header--title-sub">
+          <h3>Let's <span>workout</span> on your schedule</h3>
+        </div>
+      </div><!-- end of header--slogan -->
+   
+
+    <div class="header--links">
+      <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
+      <img class="profile--icon"  src="img/My Profile Icon.png" alt="My Profile Icon">
+    </div>
+
+
+  </div><!-- end of header--wrapper -->
+  </header>
+
+<div class="main-content-wrapper">
+
+  <div class="nav--menu">
+    <a class="nav--menu-find nav--menu-active" href="#">Find a Class</a>
+    <a class="nav--menu-login " href="#">Log In</a>
+    <a class="nav--menu-join " href="#">Join Now</a>
+  </div>
+
+
+  <div class="card card--technique">
+    <div class="card--img">
+      <img src="img/haspu-2.png" alt="Technique Guides">
+    </div>
+    <div class="card--title">
+      <h2>Technique Guides</h2>
+      <p>Learn amazing street workout and calisthenics skills</p> 
+    </div>
+  </div>
+
+
+  <div class="card card--training">
+    <div class="card--title">
+     <h2>Skils Training</h2> 
+      <p>learn the secrets of body weight techniques</p> 
+    </div>
+    <div class="card--img">
+      <img src="img/oah.png" alt="Skills Training">
+    </div>
+  </div>
+
+
+  <div class="card card--strength">
+    <div class="card--img">
+      <img src="img/man.png" alt="Strength Training">
+    </div>
+    <div class="card--title">
+      <h2>Strength Training</h2>
+      <p>Train anytime, everywhere and become
+          a superhero!</p>  
+    </div>
+  </div>
+</div>
+
+
+
+  <footer>
+    Air
+    Fitness
+
+    Phone:(123) 456-7890
+    Email: contact@airfitness.com
+    Social Media Icons
+
+    2019 Air Fitness
+  </footer>
+  <a href="/app"></a>
+</body>
+
 </html>
