setup footer. worked on responsive functionality

--- a/landing/index.html
+++ b/landing/index.html
@@ -21,76 +21,88 @@
           <h2>fitness</h2>
         </div>
         <div class="header--title-sub">
-          <h3>Let's <span>workout</span> on your schedule</h3>
+          <h3>Let's <span>workout</span> on your schedule!</h3>
         </div>
       </div><!-- end of header--slogan -->
-   
-
-    <div class="header--links">
-      <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
-      <img class="profile--icon"  src="img/My Profile Icon.png" alt="My Profile Icon">
-    </div>
 
 
-  </div><!-- end of header--wrapper -->
+      <div class="header--links">
+        <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
+        <img class="profile--icon" src="img/My Profile Icon.png" alt="My Profile Icon">
+      </div>
+
+
+    </div><!-- end of header--wrapper -->
   </header>
 
-<div class="main-content-wrapper">
+  <div class="main-content-wrapper">
 
-  <div class="nav--menu">
-    <a class="nav--menu-find nav--menu-active" href="#">Find a Class</a>
-    <a class="nav--menu-login " href="#">Log In</a>
-    <a class="nav--menu-join " href="#">Join Now</a>
+    <div class="nav--menu">
+      <a class="nav--menu-button nav--menu-find nav--menu-active" href="#">Find a Class</a>
+      <a class="nav--menu-button nav--menu-login " href="#">Log In</a>
+      <a class="nav--menu-button nav--menu-join " href="#">Join Now</a>
+    </div>
+
+
+    <div class="card card--technique">
+      <div class="card--img">
+        <img src="img/haspu-2.png" alt="Technique Guides">
+      </div>
+      <div class="card--title">
+        <h2>Technique Guides</h2>
+        <p>Learn amazing street workout and calisthenics skills</p>
+      </div>
+    </div>
+
+
+    <div class="card card--training">
+      <div class="card--title">
+        <h2>Skils Training</h2>
+        <p>learn the secrets of body weight techniques</p>
+      </div>
+      <div class="card--img">
+        <img src="img/oah.png" alt="Skills Training">
+      </div>
+    </div>
+
+
+    <div class="card card--strength">
+      <div class="card--img">
+        <img src="img/barbel-man.png" alt="Strength Training">
+      </div>
+      <div class="card--title">
+        <h2>Strength Training</h2>
+        <p>Train anytime, everywhere and become
+          a superhero!</p>
+      </div>
+    </div>
   </div>
-
-
-  <div class="card card--technique">
-    <div class="card--img">
-      <img src="img/haspu-2.png" alt="Technique Guides">
-    </div>
-    <div class="card--title">
-      <h2>Technique Guides</h2>
-      <p>Learn amazing street workout and calisthenics skills</p> 
-    </div>
-  </div>
-
-
-  <div class="card card--training">
-    <div class="card--title">
-     <h2>Skils Training</h2> 
-      <p>learn the secrets of body weight techniques</p> 
-    </div>
-    <div class="card--img">
-      <img src="img/oah.png" alt="Skills Training">
-    </div>
-  </div>
-
-
-  <div class="card card--strength">
-    <div class="card--img">
-      <img src="img/man.png" alt="Strength Training">
-    </div>
-    <div class="card--title">
-      <h2>Strength Training</h2>
-      <p>Train anytime, everywhere and become
-          a superhero!</p>  
-    </div>
-  </div>
-</div>
 
 
 
   <footer>
-    Air
-    Fitness
-
-    Phone:(123) 456-7890
-    Email: contact@airfitness.com
-    Social Media Icons
-
-    2019 Air Fitness
+    <div id="footer--wrapper">
+      <div class="footer--title">
+        <h1>AIR</h1>
+        <h2>fitness</h2>
+      </div>
+      <div>
+        <div class="footer--address">
+          <p>Phone:(123) 456-7890</p>
+          <p>Email: contact@airfitness.com</p>
+          <p>Social Media Icons</p>
+          <p>2019 Air Fitness</p>
+        </div>
+      </div>
+    </div>
   </footer>
+
+
   <a href="/app"></a>
+
+
+  <script src="js/script.js">
+  </script>
 </body>
 
 </html>
