created desktop profile

--- a/landing/index.html
+++ b/landing/index.html
@@ -12,9 +12,7 @@
 <body>
 
   <header class="header">
-
     <div class="header--wrapper">
-
       <div class="header--slogan">
         <div class="header--title">
           <h1>AIR</h1>
@@ -25,13 +23,16 @@
         </div>
       </div><!-- end of header--slogan -->
 
+      <nav class="main--nav">
+        <a href="">Find a Class</a>
+        <a href="">Log In</a>
+        <a href="">Join Now</a>
+      </nav>
 
       <div class="header--links">
         <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
         <img class="profile--icon" src="img/My Profile Icon.png" alt="My Profile Icon">
       </div>
-
-
     </div><!-- end of header--wrapper -->
   </header>
 
@@ -43,40 +44,121 @@
       <a class="nav--menu-button nav--menu-join " href="#">Join Now</a>
     </div>
 
+    <div class="cards">
 
-    <div class="card card--technique">
-      <div class="card--img">
-        <img src="img/haspu-2.png" alt="Technique Guides">
+
+      <div class="card card--technique">
+        <div class="card--img">
+          <img src="img/haspu-2.png" alt="Technique Guides">
+        </div>
+        <div class="card--title">
+          <h2>Technique Guides</h2>
+          <p>Learn amazing street workout and calisthenics skills</p>
+        </div>
       </div>
-      <div class="card--title">
-        <h2>Technique Guides</h2>
-        <p>Learn amazing street workout and calisthenics skills</p>
+
+
+      <div class="card card--training">
+        <div class="card--title">
+          <h2>Skils Training</h2>
+          <p>learn the secrets of body weight techniques</p>
+        </div>
+        <div class="card--img">
+          <img src="img/oah.png" alt="Skills Training">
+        </div>
+      </div>
+
+
+      <div class="card card--strength">
+        <div class="card--img">
+          <img src="img/barbel-man.png" alt="Strength Training">
+        </div>
+        <div class="card--title">
+          <h2>Strength Training</h2>
+          <p>Train anytime, everywhere and become
+            a superhero!</p>
+        </div>
+      </div>
+
+    </div> <!-- end of cards -->
+  </div><!-- end of main-content-wrapper -->
+
+
+
+  <section class="exercise--cards">
+
+    <div class="exercise--card">
+      <div class="exercise--card-content">
+        <h1>Train To The Pain</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci laborum, aspernatur ipsa dolores obcaecati
+          excepturi quia ullam fugit cupiditate nisi quaerat eveniet ex suscipit. Sequi aperiam consequatur temporibus
+          placeat molestiae voluptatum aliquid, mollitia perspiciatis voluptatem quaerat nobis? Dolorum dolor, illo
+          repellendus nulla soluta molestias culpa accusantium dicta non, illum sapiente quam beatae in aut quaerat
+          natus suscipit itaque veniam. Iure!</p>
+      </div>
+
+      <div style="position: relative;">
+        <div class="exercise--image">
+          <img src="img/fitness1.jpg" alt="Man lifting barbell">
+          <blockquote>
+            <h2>Joe simply kicked my ass and I love him for it!</h2>
+          </blockquote>
+        </div>
+      </div>
+
+    </div>
+
+
+
+
+    <div class="exercise--card">
+
+
+      <div style="position: relative;">
+        <div class="exercise--image ">
+          <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
+          <blockquote class="blockquote-2">
+            <h2>Can't wait for my 20 year high school reunion!</h2>
+          </blockquote>
+        </div>
+      </div>
+
+
+      <div class="exercise--card-content">
+        <h1>Absolutely We Train Abs</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatibus provident perspiciatis
+          recusandae dicta, autem atque. Enim a, tempora, voluptates debitis sapiente, alias voluptas laborum earum
+          ratione optio minima commodi esse cupiditate sit minus perspiciatis magnam dolorem quaerat eveniet ducimus
+          obcaecati. Iure officiis aliquam doloribus!</p>
       </div>
     </div>
 
 
-    <div class="card card--training">
-      <div class="card--title">
-        <h2>Skils Training</h2>
-        <p>learn the secrets of body weight techniques</p>
+
+    <div class="exercise--card">
+      <div class="exercise--card-content">
+        <h1>Run Until the Corns Come Home</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam provident eveniet possimus atque
+          recusandae fugit itaque tempore! Enim aut eum laudantium nihil, dolorum hic quam commodi corrupti eaque ab
+          aperiam. Dolorum obcaecati ipsam, praesentium, dolores nisi est, a exercitationem ab maxime unde asperiores ea
+          nostrum perspiciatis. Deleniti dolore tempore praesentium veritatis nemo unde at corrupti, aperiam,
+          consectetur explicabo ullam voluptatibus quasi cumque beatae rem nihil accusamus aspernatur. Neque, ut!</p>
       </div>
-      <div class="card--img">
-        <img src="img/oah.png" alt="Skills Training">
+
+
+      <div style="position: relative;">
+        <div class="exercise--image">
+          <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
+          <blockquote>
+            <h2>Sally got us off our butts and away from the TV!</h2>
+          </blockquote>
+        </div>
       </div>
+
     </div>
 
 
-    <div class="card card--strength">
-      <div class="card--img">
-        <img src="img/barbel-man.png" alt="Strength Training">
-      </div>
-      <div class="card--title">
-        <h2>Strength Training</h2>
-        <p>Train anytime, everywhere and become
-          a superhero!</p>
-      </div>
-    </div>
-  </div>
+  </section>
 
 
 
