--- a/landing/index.html
+++ b/landing/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./css/index.css">
-  <title>Document</title>
+  <title>Air Fitness -- Home Page</title>
 </head>
 
 <body>
 
   <header class="header">
     <div class="header--wrapper">
+
       <div class="header--slogan">
         <div class="header--title">
           <h1>AIR</h1>
@@ -24,17 +25,22 @@
       </div><!-- end of header--slogan -->
 
       <nav class="main--nav">
-        <a href="">Find a Class</a>
-        <a href="">Log In</a>
-        <a href="">Join Now</a>
-      </nav>
+          <a href="#">Find a Class</a>
+          <a href="#">Log In</a>
+          <a href="#">Join Now</a>
+          <a href="#">About Us</a>
+        </nav>
 
       <div class="header--links">
         <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
         <img class="profile--icon" src="img/My Profile Icon.png" alt="My Profile Icon">
       </div>
-    </div><!-- end of header--wrapper -->
+
+
+    </div><!-- end of header-wrapper -->
   </header>
+
+
 
   <div class="main-content-wrapper">
 
@@ -49,7 +55,7 @@
 
       <div class="card card--technique">
         <div class="card--img">
-          <img src="img/haspu-2.png" alt="Technique Guides">
+          <img src="./img/haspu-2.png" alt="Technique Guides">
         </div>
         <div class="card--title">
           <h2>Technique Guides</h2>
@@ -60,18 +66,18 @@
 
       <div class="card card--training">
         <div class="card--title">
-          <h2>Skils Training</h2>
+          <h2>Skills Training</h2>
           <p>learn the secrets of body weight techniques</p>
         </div>
         <div class="card--img">
-          <img src="img/oah.png" alt="Skills Training">
+          <img src="./img/oah.png" alt="Skills Training">
         </div>
       </div>
 
 
       <div class="card card--strength">
         <div class="card--img">
-          <img src="img/barbel-man.png" alt="Strength Training">
+          <img src="./img/barbel-man.png" alt="Strength Training">
         </div>
         <div class="card--title">
           <h2>Strength Training</h2>
@@ -84,107 +90,104 @@
   </div><!-- end of main-content-wrapper -->
 
 
-
   <section class="exercise--cards">
 
-    <div class="exercise--card">
-      <div class="exercise--card-content">
-        <h1>Train To The Pain</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci laborum, aspernatur ipsa dolores obcaecati
-          excepturi quia ullam fugit cupiditate nisi quaerat eveniet ex suscipit. Sequi aperiam consequatur temporibus
-          placeat molestiae voluptatum aliquid, mollitia perspiciatis voluptatem quaerat nobis? Dolorum dolor, illo
-          repellendus nulla soluta molestias culpa accusantium dicta non, illum sapiente quam beatae in aut quaerat
-          natus suscipit itaque veniam. Iure!</p>
+      <div class="exercise--card">
+        <div class="exercise--card-content">
+          <img src="./img/haspu-2.png" alt="">
+          <h1>Technique Guides</h1>
+          <h2>Learn street workout and calisthenics skills</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci laborum, aspernatur ipsa dolores obcaecati
+            excepturi quia ullam fugit cupiditate nisi quaerat eveniet ex suscipit. Sequi aperiam consequatur temporibus
+            placeat molestiae voluptatum aliquid, mollitia perspiciatis voluptatem quaerat nobis? Dolorum dolor, illo
+            repellendus nulla soluta molestias culpa accusantium dicta non, illum sapiente quam beatae in aut quaerat
+            natus suscipit itaque veniam. Iure!</p>
+        </div>
+  
+        <div style="position: relative;">
+          <div class="exercise--image">
+            <img src="img/fitness1.jpg" alt="Man lifting barbell">
+            <blockquote>
+              <h2>I never thought I'd be in this good of shape!</h2>
+            </blockquote>
+          </div>
+        </div>
+  
       </div>
-
-      <div style="position: relative;">
-        <div class="exercise--image">
-          <img src="img/fitness1.jpg" alt="Man lifting barbell">
-          <blockquote>
-            <h2>Joe simply kicked my ass and I love him for it!</h2>
-          </blockquote>
+  
+  
+  
+  
+      <div class="exercise--card">
+  
+  
+        <div style="position: relative;">
+          <div class="exercise--image ">
+            <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
+            <blockquote class="blockquote-2">
+              <h2>Can't wait for my 20 year high school reunion!</h2>
+            </blockquote>
+          </div>
+        </div>
+  
+  
+        <div class="exercise--card-content">
+            <img src="./img/oah.png" alt="Skills Training" class="skills-img">
+          <h1>Skills Training</h1>
+          <h2>Learn the secrets of body weight techniques</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatibus provident perspiciatis
+            recusandae dicta, autem atque. Enim a, tempora, voluptates debitis sapiente, alias voluptas laborum earum
+            ratione optio</p>
         </div>
       </div>
-
-    </div>
-
-
-
-
-    <div class="exercise--card">
-
-
-      <div style="position: relative;">
-        <div class="exercise--image ">
-          <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
-          <blockquote class="blockquote-2">
-            <h2>Can't wait for my 20 year high school reunion!</h2>
-          </blockquote>
+  
+  
+  
+      <div class="exercise--card">
+        <div class="exercise--card-content">
+            <img src="./img/barbel-man.png" alt="Strength Training">
+          <h1>Strength Training</h1>
+          <h2>Train anytime, everywhere and become a superhero!</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam provident eveniet possimus atque
+            recusandae fugit itaque tempore! Enim aut eum laudantium nihil, dolorum hic quam commodi corrupti eaque ab
+            aperiam. Dolorum obcaecati ipsam, praesentium, dolores nisi est, a exercitationem ab maxime unde asperiores ea
+            nostrum perspiciatis. Deleniti dolore tempore praesentium veritatis nemo unde at corrupti, aperiam,
+            consectetur explicabo ullam voluptatibus quasi cumque beatae rem nihil accusamus aspernatur. Neque, ut!</p>
         </div>
-      </div>
-
-
-      <div class="exercise--card-content">
-        <h1>Absolutely We Train Abs</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatibus provident perspiciatis
-          recusandae dicta, autem atque. Enim a, tempora, voluptates debitis sapiente, alias voluptas laborum earum
-          ratione optio minima commodi esse cupiditate sit minus perspiciatis magnam dolorem quaerat eveniet ducimus
-          obcaecati. Iure officiis aliquam doloribus!</p>
-      </div>
-    </div>
-
-
-
-    <div class="exercise--card">
-      <div class="exercise--card-content">
-        <h1>Run Until the Corns Come Home</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam provident eveniet possimus atque
-          recusandae fugit itaque tempore! Enim aut eum laudantium nihil, dolorum hic quam commodi corrupti eaque ab
-          aperiam. Dolorum obcaecati ipsam, praesentium, dolores nisi est, a exercitationem ab maxime unde asperiores ea
-          nostrum perspiciatis. Deleniti dolore tempore praesentium veritatis nemo unde at corrupti, aperiam,
-          consectetur explicabo ullam voluptatibus quasi cumque beatae rem nihil accusamus aspernatur. Neque, ut!</p>
-      </div>
-
-
-      <div style="position: relative;">
-        <div class="exercise--image">
-          <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
-          <blockquote>
-            <h2>Sally got us off our butts and away from the TV!</h2>
-          </blockquote>
+  
+  
+        <div style="position: relative;">
+          <div class="exercise--image">
+            <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
+            <blockquote>
+              <h2>We no longer sit around watching TV all day!</h2>
+            </blockquote>
+          </div>
         </div>
+  
       </div>
-
-    </div>
-
-
-  </section>
+  
+  
+    </section>
 
 
-
+  
   <footer>
-    <div id="footer--wrapper">
-      <div class="footer--title">
-        <h1>AIR</h1>
-        <h2>fitness</h2>
-      </div>
-      <div>
-        <div class="footer--address">
-          <p>Phone:(123) 456-7890</p>
-          <p>Email: contact@airfitness.com</p>
-          <p>Social Media Icons</p>
-          <p>2019 Air Fitness</p>
+      <div id="footer--wrapper">
+        <div class="footer--title">
+          <h1>AIR</h1>
+          <h2>fitness</h2>
+        </div>
+        <div>
+          <div class="footer--address">
+            <p>Phone:(123) 456-7890</p>
+            <p>Email: contact@airfitness.com</p>
+            <p>Social Media Icons</p>
+            <p>2019 Air Fitness</p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
-
-
-  <a href="/app"></a>
-
-
-  <script src="js/script.js">
-  </script>
+    </footer>
 </body>
 
 </html>
