added about page

--- a/landing/index.html
+++ b/landing/index.html
@@ -16,8 +16,8 @@
 
       <div class="header--slogan">
         <div class="header--title">
-          <h1>AIR</h1>
-          <h2>fitness</h2>
+         <a href="index.html"><h1>AIR</h1>
+          <h2>fitness</h2></a>
         </div>
         <div class="header--title-sub">
           <h3>Let's <span>workout</span> on your schedule!</h3>
@@ -28,7 +28,7 @@
           <a href="#">Find a Class</a>
           <a href="#">Log In</a>
           <a href="#">Join Now</a>
-          <a href="#">About Us</a>
+          <a href="about.html">About Us</a>
         </nav>
 
       <div class="header--links">
@@ -85,6 +85,16 @@
             a superhero!</p>
         </div>
       </div>
+
+       <a href="about.html" style="text-decoration: none;"><div class="card card--strength">
+        <div class="card--img">
+          <img src="./img/about.png" alt="Strength Training">
+        </div>
+        <div class="card--title">
+          <h2>About Us</h2>
+          <p>Learn about our super trainers!</p>
+        </div>
+      </div></a>
 
     </div> <!-- end of cards -->
   </div><!-- end of main-content-wrapper -->
