added signup link

--- a/landing/index.html
+++ b/landing/index.html
@@ -27,7 +27,7 @@
       <nav class="main--nav">
           <a href="#">Find a Class</a>
           <a href="#">Log In</a>
-          <a href="#">Join Now</a>
+          <a href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
           <a href="about.html">About Us</a>
         </nav>
 
@@ -47,7 +47,7 @@
     <div class="nav--menu">
       <a class="nav--menu-button nav--menu-find nav--menu-active" href="#">Find a Class</a>
       <a class="nav--menu-button nav--menu-login " href="#">Log In</a>
-      <a class="nav--menu-button nav--menu-join " href="#">Join Now</a>
+      <a class="nav--menu-button nav--menu-join " href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
     </div>
 
     <div class="cards">
