added scroll effect to quotes on home page

--- a/landing/about.html
+++ b/landing/about.html
@@ -11,7 +11,7 @@
     <title>Air Fitness -- About Us</title>
 </head>
 
-<body>
+<body style=>
 
     <header class="header">
         <div class="header--wrapper">
@@ -96,8 +96,8 @@
                     <div>
                         <p class="profile--card-name">Binish Ahmed</p>
                         <div class="profile--card-social">
-                            <a href=""><i class="fab fa-twitter-square fa-5x"></i></a>
-                            <a href=""><i class="fab fa-github-square fa-5x"></i></a>
+                            <a href="#"><i class="fab fa-twitter-square fa-5x"></i></a>
+                            <a href="#"><i class="fab fa-github-square fa-5x"></i></a>
                         </div>
                     </div>
                 </div>
@@ -111,8 +111,8 @@
                     <div>
                         <p class="profile--card-name">David Martinson</p>
                         <div class="profile--card-social">
-                            <a href=""><i class="fab fa-twitter-square fa-5x"></i></a>
-                            <a href=""><i class="fab fa-github-square fa-5x"></i></a>
+                            <a href="#"><i class="fab fa-twitter-square fa-5x"></i></a>
+                            <a href="#"><i class="fab fa-github-square fa-5x"></i></a>
                         </div>
                     </div>
                 </div>
