--- a/landing/index.html
+++ b/landing/index.html
@@ -134,7 +134,7 @@
         <div style="position: relative;">
           <div class="exercise--image ">
             <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
-            <blockquote class="blockquote-2">
+            <blockquote class="blockquote-2 quote-disappear">
               <h2>Can't wait for my 20 year high school reunion!</h2>
             </blockquote>
           </div>
@@ -169,7 +169,7 @@
         <div style="position: relative;">
           <div class="exercise--image">
             <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
-            <blockquote>
+            <blockquote class="quote-disappear2">
               <h2>We no longer sit around watching TV all day!</h2>
             </blockquote>
           </div>
@@ -198,6 +198,7 @@
         </div>
       </div>
     </footer>
-</body>
 
+  <script src="js/script.js"></script>
+</body>
 </html>
