added tabs, cleaned up a lot of little things

--- a/landing/about.html
+++ b/landing/about.html
@@ -43,7 +43,7 @@
     </header>
 
 
-    <section class="profile--cards" style="padding-top: 00px;">
+    <section class="profile--cards">
         <div class="profile--cards-wrapper">
 
 
@@ -116,12 +116,12 @@
                         </div>
                     </div>
                 </div>
-    
-
 
         </div><!-- end of profile card wrapper -->
     </section>
 
+
+    
 
 
     <footer>
