--- a/landing/index.html
+++ b/landing/index.html
@@ -16,8 +16,10 @@
 
       <div class="header--slogan">
         <div class="header--title">
-         <a href="index.html"><h1>AIR</h1>
-          <h2>fitness</h2></a>
+          <a href="index.html">
+            <h1>AIR</h1>
+            <h2>fitness</h2>
+          </a>
         </div>
         <div class="header--title-sub">
           <h3>Let's <span>workout</span> on your schedule!</h3>
@@ -25,18 +27,16 @@
       </div><!-- end of header--slogan -->
 
       <nav class="main--nav">
-          <a href="#">Find a Class</a>
-          <a href="#">Log In</a>
-          <a href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
-          <a href="about.html">About Us</a>
-        </nav>
+        <a href="#">Find a Class</a>
+        <a href="#">Log In</a>
+        <a href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
+        <a href="about.html">About Us</a>
+      </nav>
 
       <div class="header--links">
         <img class="magnify" src="img/Search Icon.png" alt="Search Icon">
         <img class="profile--icon" src="img/My Profile Icon.png" alt="My Profile Icon">
       </div>
-
-
     </div><!-- end of header-wrapper -->
   </header>
 
@@ -47,12 +47,14 @@
     <div class="nav--menu">
       <a class="nav--menu-button nav--menu-find nav--menu-active" href="#">Find a Class</a>
       <a class="nav--menu-button nav--menu-login " href="#">Log In</a>
-      <a class="nav--menu-button nav--menu-join " href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
+      <a class="nav--menu-button nav--menu-join " href="https://airfitness-frontend.herokuapp.com/app/signup">Join
+        Now</a>
     </div>
 
+
+
+    <!-- small mobile cards -->
     <div class="cards">
-
-
       <div class="card card--technique">
         <div class="card--img">
           <img src="./img/haspu-2.png" alt="Technique Guides">
@@ -86,119 +88,150 @@
         </div>
       </div>
 
-       <a href="about.html" style="text-decoration: none;"><div class="card card--strength">
-        <div class="card--img">
-          <img src="./img/about.png" alt="Strength Training">
+      <a href="about.html" style="text-decoration: none;">
+        <div class="card card--strength">
+          <div class="card--img">
+            <img src="./img/about.png" alt="Strength Training">
+          </div>
+          <div class="card--title">
+            <h2>About Us</h2>
+            <p>Learn about our super trainers!</p>
+          </div>
         </div>
-        <div class="card--title">
-          <h2>About Us</h2>
-          <p>Learn about our super trainers!</p>
-        </div>
-      </div></a>
+      </a>
 
     </div> <!-- end of cards -->
   </div><!-- end of main-content-wrapper -->
 
-
   <section class="exercise--cards">
-
-      <div class="exercise--card">
-        <div class="exercise--card-content">
-          <img src="./img/haspu-2.png" alt="">
-          <h1>Technique Guides</h1>
-          <h2>Learn street workout and calisthenics skills</h2>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci laborum, aspernatur ipsa dolores obcaecati
-            excepturi quia ullam fugit cupiditate nisi quaerat eveniet ex suscipit. Sequi aperiam consequatur temporibus
-            placeat molestiae voluptatum aliquid, mollitia perspiciatis voluptatem quaerat nobis? Dolorum dolor, illo
-            repellendus nulla soluta molestias culpa accusantium dicta non, illum sapiente quam beatae in aut quaerat
-            natus suscipit itaque veniam. Iure!</p>
-        </div>
-  
-        <div style="position: relative;">
-          <div class="exercise--image">
-            <img src="img/fitness1.jpg" alt="Man lifting barbell">
-            <blockquote>
-              <h2>I never thought I'd be in this good of shape!</h2>
-            </blockquote>
-          </div>
-        </div>
-  
+    <div class="exercise--card">
+      <div class="exercise--card-content">
+        <img src="./img/haspu-2.png" alt="">
+        <h1>Technique Guides</h1>
+        <h2>Learn street workout and calisthenics skills</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci laborum, aspernatur ipsa dolores obcaecati
+          excepturi quia ullam fugit cupiditate nisi quaerat eveniet ex suscipit. Sequi aperiam consequatur temporibus
+          placeat molestiae voluptatum aliquid, mollitia perspiciatis voluptatem quaerat nobis? Dolorum dolor, illo
+          repellendus nulla soluta molestias culpa accusantium dicta non, illum sapiente quam beatae in aut quaerat
+          natus suscipit itaque veniam. Iure!</p>
       </div>
-  
-  
-  
-  
-      <div class="exercise--card">
-  
-  
-        <div style="position: relative;">
-          <div class="exercise--image ">
-            <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
-            <blockquote class="blockquote-2 quote-disappear">
-              <h2>Can't wait for my 20 year high school reunion!</h2>
-            </blockquote>
-          </div>
-        </div>
-  
-  
-        <div class="exercise--card-content">
-            <img src="./img/oah.png" alt="Skills Training" class="skills-img">
-          <h1>Skills Training</h1>
-          <h2>Learn the secrets of body weight techniques</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatibus provident perspiciatis
-            recusandae dicta, autem atque. Enim a, tempora, voluptates debitis sapiente, alias voluptas laborum earum
-            ratione optio</p>
+
+      <div style="position: relative;">
+        <div class="exercise--image">
+          <img src="img/fitness1.jpg" alt="Man lifting barbell">
+          <blockquote>
+            <h2>I never thought I'd be in this good of shape!</h2>
+          </blockquote>
         </div>
       </div>
-  
-  
-  
-      <div class="exercise--card">
-        <div class="exercise--card-content">
-            <img src="./img/barbel-man.png" alt="Strength Training">
-          <h1>Strength Training</h1>
-          <h2>Train anytime, everywhere and become a superhero!</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam provident eveniet possimus atque
-            recusandae fugit itaque tempore! Enim aut eum laudantium nihil, dolorum hic quam commodi corrupti eaque ab
-            aperiam. Dolorum obcaecati ipsam, praesentium, dolores nisi est, a exercitationem ab maxime unde asperiores ea
-            nostrum perspiciatis. Deleniti dolore tempore praesentium veritatis nemo unde at corrupti, aperiam,
-            consectetur explicabo ullam voluptatibus quasi cumque beatae rem nihil accusamus aspernatur. Neque, ut!</p>
+
+    </div><!-- end of card -->
+    <div class="exercise--card">
+      <div style="position: relative;">
+        <div class="exercise--image ">
+          <img src="img/fitness2.jpg" alt="Woman posing in front of weights">
+          <blockquote class="blockquote-2 quote-disappear">
+            <h2>Can't wait for my 20 year high school reunion!</h2>
+          </blockquote>
         </div>
-  
-  
-        <div style="position: relative;">
-          <div class="exercise--image">
-            <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
-            <blockquote class="quote-disappear2">
-              <h2>We no longer sit around watching TV all day!</h2>
-            </blockquote>
-          </div>
-        </div>
-  
       </div>
-  
-  
-    </section>
+      <div class="exercise--card-content">
+        <img src="./img/oah.png" alt="Skills Training" class="skills-img">
+        <h1>Skills Training</h1>
+        <h2>Learn the secrets of body weight techniques</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatibus provident perspiciatis
+          recusandae dicta, autem atque. Enim a, tempora, voluptates debitis sapiente, alias voluptas laborum earum
+          ratione optio</p>
+      </div>
+    </div><!-- end of card -->
+    <div class="exercise--card">
+      <div class="exercise--card-content">
+        <img src="./img/barbel-man.png" alt="Strength Training">
+        <h1>Strength Training</h1>
+        <h2>Train anytime, everywhere and become a superhero!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aliquam provident eveniet possimus atque
+          recusandae fugit itaque tempore! Enim aut eum laudantium nihil, dolorum hic quam commodi corrupti eaque ab
+          aperiam. Dolorum obcaecati ipsam, praesentium, dolores nisi est, a exercitationem ab maxime unde asperiores ea
+          nostrum perspiciatis. Deleniti dolore tempore praesentium veritatis nemo unde at corrupti, aperiam,
+          consectetur explicabo ullam voluptatibus quasi cumque beatae rem nihil accusamus aspernatur. Neque, ut!</p>
+      </div>
+      <div style="position: relative;">
+        <div class="exercise--image">
+          <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
+          <blockquote class="quote-disappear2">
+            <h2>We no longer sit around watching TV all day!</h2>
+          </blockquote>
+        </div>
+      </div>
+    </div><!-- end of card -->
+
+  </section> <!-- end of exercise cards -->
+
+  <!-- Tabs Content Section -->
+  <section class="tab-section">
+    <div class="tabs">
+      <div class="tabs-links">
+        <div class="tabs-link tabs-link-selected" data-tab="1">How To Start!</div>
+        <div class="tabs-link" data-tab="2">Our Trainers</div>
+        <div class="tabs-link" data-tab="3">Motivation</div>
+      </div>
 
 
-  
+      <div class="tabs-items">
+        <div class="tabs-item tabs-item-selected" data-tab="1">
+          <div class="tabs-item-title">Follow these easy steps</div>
+          <div class="tabs-item-description">
+            <p>1. Sign up. We've made it really easy. Just supply a user name, a password and an email address.</p>
+            <p>2. Look through the many classes we have to offer. We have it all.</p>
+            <p>3. Purchase a package plan.</p>
+            <p>4. Set the dates you want and get ready for a new you.</p>
+          </div>
+        </div><!-- end of tabs item -->
+        <div class="tabs-item" data-tab="2">
+          <div class="tabs-item-title">We have the best!</div>
+          <div class="tabs-item-description">
+            <p>We have a team of 45 trainers that are ready and willing to work with you to become part of your success story.
+              With experts in rehabilitation, strength training, weight loss, nutrition and sports conditioning; there
+              is a certified trainer specialized in your needs at Air Fitness. You can read about each trainer and the
+              plans they offer.</p>
+          </div>
+        </div><!-- end of tabs item-->
+        <div class="tabs-item" data-tab="3">
+          <div class="tabs-item-title">Our trainers are great motivators</div>
+          <div class="tabs-item-description">
+            <p>Our trainers believe a successful fitness program has four parts. To learn more about them,
+              sign up today and get started.</p><br>
+            <p>1. Give Yourself a Real Reward </p>
+            <p>2. Sign a Commitment Contract </p>
+            <p>3. Rethink Positive Thinking</p>
+            <p>4. Find Your Fitness Tribe ** This one you already have at Air Fitness</p>
+          </div>
+        </div><!-- end of tabs item-->
+      </div><!-- end of tabs items -->
+    </div><!-- end of tabs -->
+
+  </section>
+
+
   <footer>
-      <div id="footer--wrapper">
-        <div class="footer--title">
-          <h1>AIR</h1>
-          <h2>fitness</h2>
-        </div>
-        <div>
-          <div class="footer--address">
-            <p>Phone:(123) 456-7890</p>
-            <p>Email: contact@airfitness.com</p>
-            <p>Social Media Icons</p>
-            <p>2019 Air Fitness</p>
-          </div>
+    <div id="footer--wrapper">
+      <div class="footer--title">
+        <h1>AIR</h1>
+        <h2>fitness</h2>
+      </div>
+      <div>
+        <div class="footer--address">
+          <p>Phone:(123) 456-7890</p>
+          <p>Email: contact@airfitness.com</p>
+          <p>Social Media Icons</p>
+          <p>2019 Air Fitness</p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   <script src="js/script.js"></script>
+  <script src="js/tabs.js"></script>
 </body>
+
 </html>
