added login link

--- a/landing/index.html
+++ b/landing/index.html
@@ -28,7 +28,7 @@
 
       <nav class="main--nav">
         <a href="#">Find a Class</a>
-        <a href="#">Log In</a>
+        <a href="https://airfitness-frontend.herokuapp.com/app/login">Log In</a>
         <a href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
         <a href="about.html">About Us</a>
       </nav>
@@ -46,7 +46,7 @@
 
     <div class="nav--menu">
       <a class="nav--menu-button nav--menu-find nav--menu-active" href="#">Find a Class</a>
-      <a class="nav--menu-button nav--menu-login " href="#">Log In</a>
+      <a class="nav--menu-button nav--menu-login " href="https://airfitness-frontend.herokuapp.com/app/login">Log In</a>
       <a class="nav--menu-button nav--menu-join " href="https://airfitness-frontend.herokuapp.com/app/signup">Join
         Now</a>
     </div>
