--- a/landing/about.html
+++ b/landing/about.html
@@ -30,7 +30,7 @@
 
             <nav class="main--nav">
                 <a href="#">Find a Class</a>
-                <a href="#">Log In</a>
+                <a href="https://airfitness-frontend.herokuapp.com/app/login">Log In</a>
                 <a href="https://airfitness-frontend.herokuapp.com/app/signup">Join Now</a>
                 <a href="about.html" style="color: #f77e25;">About Us</a>
             </nav>
