--- a/landing/index.html
+++ b/landing/index.html
@@ -158,7 +158,7 @@
       <div style="position: relative;">
         <div class="exercise--image">
           <img src="img/fitness3.jpg" alt="Couple jogging in a city park">
-          <blockquote class="quote-disappear2">
+          <blockquote class="quote-disappear">
             <h2>We no longer sit around watching TV all day!</h2>
           </blockquote>
         </div>
